# heron_simulator

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: README.md  dlio_heron.yaml  heron_controller.yaml  scenarios.yaml  thruster_dynamics.yaml  thruster_dynamics_exploration.yaml  thruster_dynamics_session4_proxy.yaml  topic_contract.yaml  twist_to_drive.yaml  twist_to_drive_exploration.yaml
config/entities/: README.md  harbor.yaml  pool.yaml  session03_oracle_ablation.yaml
config/scenarios/: README.md  harbor.yaml  pool.yaml
docs/: README.md  hydrodynamics.md  nodes.md  topic_contract.md
launch/: README.md  bringup_sim.launch  dlio.launch  gazebo_world.launch  heron_lake_world.launch  heron_world.launch  local_playback.launch  run.launch  simulation.launch  simulation_full.launch  software_stack.launch  spawn_heron.launch  upstream_spawn_heron.launch
models/lake/: model.config  model.sdf
models/ocean/: model.config  model.sdf
models/tank/: model.config  model.sdf
models/tank_targets/: model.config  model.sdf
models/water_surface/: README.md  model.config  model.sdf
scripts/: README.md  drive_to_thrusters.py  empirical_actuator_proxy.py  fake_localize.py  gazebo_with_xvfb.sh  ground_truth_control_odometry.py  launch_sim.sh  map_gt_publisher.py  mock_defector_service.py  multibeam_raw.py  ping360_profile_model.py  ping360_profile_sim.py  profile_env_run.sh  run_headless_recording.sh  scan_to_cloud.py  scenarios.py  sim_ig_timing.py  sim_odom_publisher.py  sim_sense.py  spawn_inspection_models.py  validate_drive_to_thrusters.py  validate_hydrodynamics_launch.py  validate_lidar_fidelity_profiles.py  validate_ping360_profile_sim.py  vel_cov_fixed.py  verify_movement.py
scripts/autonomy/: mock_defector_service.py  spawn_inspection_models.py
scripts/control/: activate_control_service.py  cmd_drive_translate.py  twist_translate.py  vessel_dynamics.py
scripts/sensors/: navsat_vel_translate.py  rpy_translator.py  scan_to_cloud.py  vector3_to_magnetic_field.py  vel_cov_fixed.py
scripts/tools/: gzclient_plain.py  reset_gazebo.sh  sim_preflight.py  startup_unpause.py  topic_contract_guard.py
scripts/utils/: kill_sim.sh  launch_sim.sh  run_headless_recording.sh
src/: PassiveDisturbancePlugin.cpp  PathVisualizerPlugin.cpp  README.md  RelativeForcePlugin.cpp
tests/: test_benchmark_hull_profile.py  test_cmd_drive_translate.py  test_fathomwerx_pool_world.py  test_heron_simulator_contracts.py  test_render_visibility.py  test_scenarios.py  test_sim_exploration_motion_profiles.py  test_sim_ig_timing.py  test_sim_preflight.py  test_simulation_launch.py  test_software_stack_launch.py  test_sonar_urdf_profile.py  test_spawn_heron_launch.py  test_spawn_inspection_models_offset.py  test_spawn_inspection_models_shutdown.py  test_startup_unpause.py  test_topic_contract_guard.py  test_twist_to_drive_exploration_config.py
urdf/: README.md  heron_sim.urdf.xacro  ig_handle_sensors.urdf.xacro  sensors.urdf.xacro
worlds/: README.md  fathomwerx_pool.world  harbor.world  inspection_dock.world  lake.world  ocean_surface.world  open_water.world  oracle_demo_harbor.world  pool.world  tank.world
