<?xml version="1.0"?>
<package format="2">
  <name>heron_simulator</name>
  <version>0.4.0</version>
  <description>
    Gazebo simulation for the Heron USV hull, thruster bridge, and simulated
    sensor publishers. Based on heron_simulator by Clearpath Robotics.
  </description>

  <!-- Project maintainer -->
  <maintainer email="aaronjs@g.ucla.edu">Aaron John Sabu</maintainer>

  <!-- Original Clearpath authors -->
  <author email="gstoppi@clearpathrobotics.com">Guy Stoppi (Clearpath Robotics)</author>
  <author email="yanma@clearpathrobotics.com">Yan Ma (Clearpath Robotics)</author>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis (Clearpath Robotics)</author>

  <!-- Dual license: BSD for Clearpath code, MIT for local extensions -->
  <license>BSD, MIT</license>

  <url type="repository">https://github.com/heron/heron_simulator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <!-- Core Gazebo -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <!-- Heron packages (Clearpath) -->
  <exec_depend>heron_description</exec_depend>
  <exec_depend>heron_msgs</exec_depend>

  <!-- Sensor plugins -->
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>

  <!-- ROS core -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ig_handle</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Robot support -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
